# Agentic_ai_Langc

./: .gitignore  main.py  multi_query_nodes.txt  notes.txt  prompt_chain.py  pyproject.toml  requirements.txt  requirements2.txt  routing_design_pattern.py
Edureka_Adv_Agentic_Ai/: Multi_hop_retrieval.py  Runnable_branch.py  Runnable_seq.py  debugging_ai_agent.py
Edureka_Adv_Agentic_Ai/Multi_hop_Advance/: Multi_hop_retrieval.py  app.py  check.py  data_ingestion.py
Edureka_Adv_Agentic_Ai/Multi_hop_Advance/db/ai_agent/96d0d836-04f7-4fdb-a974-c16f53ce91eb/: index_metadata.pickle
Edureka_Adv_Agentic_Ai/Multi_hop_Advance/db/aws/9471badf-7e8d-416f-91e1-b3016d3ccb9f/: index_metadata.pickle
Edureka_Adv_Agentic_Ai/Multi_hop_Advance/db/langgraph/28ac1188-0cb7-4314-a049-707b4ca0abf2/: index_metadata.pickle
Edureka_Adv_Agentic_Ai/Multi_query_with_Fusion/: Multi_query.py
Edureka_Adv_Agentic_Ai/Multi_query_with_Fusion/Multi_hop_Advance/db/ai_agent/: chroma.sqlite3
Edureka_Adv_Agentic_Ai/db/52f28891-2ddc-4243-9f52-e34043f30a07/: index_metadata.pickle
IBM_Ai_Agentic/: Advance_MCP.py  Evaluator_optimzr.py  FastMCP.ipynb  MCP.ipynb  MultiServer_MCP.ipynb  Notes.txt  advance_mcp_complete.py  compl_MCP.py  orchestrater_pattern.py  parallelization_pattern.py  prompt_chain.py
Lcel_practice/: lecl.py
basic_reflector/: basic.py  chains.py
mcp_langchain/: client.py  mathserver.py  weather.py
updatedlangchan/: 1- langchain-intro.ipynb  Langgraph_component.ipynb  basic_chatbot.ipynb  lang_middleware.ipynb  reflexion.ipynb
(+2 files in other folders)
