[project]
name = "compl-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "grandalf>=0.8",
    "ipykernel>=7.2.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.2",
    "langsmith>=0.8.8",
    "mcp>=1.28.0",
    "python-dotenv>=1.2.2",
    "typing>=3.10.0.0",
]
